--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.5",
     "firebase": "^9.9.0",
     "framer-motion": "^12.23.12",
+    "openai": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
