--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,12 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
+    "firebase-functions": "^4.9.0",
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
-    "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
+    "eslint-config-google": "^0.14.0"
   },
   "private": true
 }
