--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.9.0",
+    "googleapis": "^157.0.0",
     "nodemailer": "^6.9.1"
   },
   "devDependencies": {
