--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.9.0",
     "googleapis": "^157.0.0",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "stripe": "^14.25.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
